# baxter_code

./: CMakeLists.txt  README.md  package.xml
caffe_model/: README.md  robot_learning.prototxt  robot_learning_solver.prototxt
caffe_model/detection_test_files/: ssd_detector_egohands_flow.py
caffe_model/modified_files/: ssd_twoStream_egohands_flow.py
launch/: 3d_object_detection.launch  baxter_object_manipulation.launch  hand_detection.launch  zed.launch
lib/window_proposals/: box_proposal_model_test.mat  box_proposal_model_train.mat  do_tracking.m  execute_matlab.sh  final_results_after_tracking.m  genWindowProposals.m  genWindowProposals4allFrames.m  lib_setup.sh  matlab_env.sh  print_bounding_boxes.m  print_bounding_boxes_w_objects.m  sampleProposals.m  simple_making_video.m  visualize_prediction_results.m
lib/window_proposals/include/: libgenwindowproposals.h
msg/: TargetJoints.msg
script/: action_net_test.py  calibrate_project.py  camera_test.py  hands_forecasting.py  one_stream_hands_forecasting.py  one_stream_hands_forecasting_w_single.py  robot_learn_net.py  train.h5  two_streams_hands_forecasting.py  two_streams_hands_forecasting_w_single.py  two_streams_hands_forecasting_w_single_NN.py  two_streams_hands_forecasting_w_single_record.py
src/: baxter_cameras.cpp  baxter_cameras.h  baxter_controller.cpp  baxter_controller.h  baxter_motion.cpp  baxter_motion.h  baxter_motion2.cpp  baxter_motion2.h  baxter_motion_bk.cpp  baxter_moveit_controller.cpp  baxter_moveit_controller.h  baxter_moveit_motion.cpp  baxter_moveit_motion.h  future_prediction.cpp  future_prediction.h  future_prediction_node.cpp  hand_detection_node.cpp  hand_detector.cpp  hand_detector.h  kinect_viewer.cpp  kinect_viewer.h  kinect_viewer_node.cpp  making_robot_training_data.cpp  making_robot_training_data.h  mimic_motion.cpp  mimic_motion.h  object_detector.cpp  object_detector.h  object_manipulation.cpp  publish_train_images_node.cpp  record_visual_odometry_node.cpp  skeleton_tracker.cpp  skeleton_tracker.h  skeleton_tracker_node.cpp  skeleton_tracker_use_skeltrack.cpp  train_representation.cpp  train_representation.h  train_representation_node.cpp
tools/: resize.py  simple_making_video.m
tools/extract_optical_flow/: extract_flow.py  test.py
